--- a/sumathi.css
+++ b/sumathi.css
@@ -21,6 +21,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+}
+
+
 .wrapper .logo-block .logo {
   display: block;
   width: 100%;
@@ -34,11 +39,13 @@ a {
 
 .navbar .menu {
   display: none;
+  cursor: pointer;
 }
 
 .navbar .close {
+  cursor: pointer;
   display: none;
-  margin: 1.5rem 0;
+  margin: 1rem 0;
 }
 
 .navbar .navbar-list {
@@ -64,6 +71,7 @@ a {
   align-items: center;
   justify-content: flex-start;
   margin-bottom: 1rem;
+  /* border: 2px solid white; */
 }
 
 .navbar .navbar-list .navbar-li .wrap .navbar-a {
@@ -93,9 +101,13 @@ a {
   top: 3.5rem;
   left: 0;
   text-wrap: nowrap;
-  padding: 2rem 1rem 0;
+  padding: 1rem 1rem 0;
   box-shadow: 2px 2px 5px rgb(184, 182, 182);
   display: none;
+}
+
+.navbar-li:hover .dropdown-items {
+  display: block !important;
 }
 
 .dropdown-items .dropdown-list {
@@ -120,6 +132,13 @@ a {
   font-size: medium;
 }
 
+
+@media screen and (max-width: 720px) {
+  .wrapper .logo-block .logo {
+    height: 10rem;
+  }
+}
+
 @media screen and (max-width:1300px) {
   .navbar .menu {
     display: block;
@@ -131,17 +150,25 @@ a {
 
   .navbar .navbar-list .navbar-li {
     margin-bottom: 1rem;
+    width: 100%;
   }
+
 
   .navbar .navbar-list .navbar-li .dropdown-items {
     position: static;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
+    /* width: 100%; */
   }
 
   .dropdown-items .dropdown-list {
     display: block;
   }
+
+  
+/* .navbar-li .wrap:active + .dropdown-items {
+  display: block;
+} */
 
   .dropdown-list .column .dropdown-li {
     margin: 0;
