--- a/sumathi.css
+++ b/sumathi.css
@@ -287,23 +287,26 @@ img {
 
 /* .current-magazine .image-card */
 .month {
-  font-size: Xx-large;
+  /* border: 2px solid red; */
+  font-size: x-large;
   font-weight: 700;
+  margin-top: 1rem;
   /* display: inline-block; */
 }
 
 .current-magazine .image-card .download {
   border: 2px solid black;
   border-top: none;
-  padding: 0 3.4rem 1.3rem;
+  padding: 0 3.4rem 0.5rem;
   font-size: large;
   font-weight: 500;
+  color: green;
 }
 
 /* section3 css */
 .section3 {
   /* border: 2px solid red; */
-  background-color: rgb(119, 185, 226);
+  /* background-color: rgb(119, 185, 226); */
   background-color: rgb(211, 233, 132);
 
   /* width: 100%; */
@@ -331,24 +334,37 @@ img {
   padding: 1rem 5rem;
 }
 
-.magazines a .image-card .download {
+.magazines  .image-card .download {
   border: 2px solid black;
   border-top: none;
   font-weight: 500;
   padding: 0.5rem 1.8rem;
 }
 
+.image-card .download a {
+  color: red;
+}
+
+
+
+
 
 /* tv channel section */
 
-/* .main .section4 {
-  border: 2px solid red;
-} */
+.main .section4 {
+  /* border: 2px solid red; */
+  background-color: rgb(226, 230, 228);
+
+}
 
 .section4 .tv-channel {
   /* border: 2px solid black; */
   margin: 0 5rem;
-  padding: 2rem 1rem 1rem;
+  padding: 3rem 1rem;
+}
+
+.tv-channel .head a {
+  color: black;
 }
 
 .tv-channel .videos-wrapper {
@@ -365,4 +381,84 @@ img {
 .tv-channel .videos-wrapper iframe {
   /* border: none; */
   border-radius: 5px;
+  border: 10px solid rgb(255, 255, 255);
+}
+
+
+
+
+
+
+.wrapper .footer {
+  /* border: 2px solid black; */
+  margin-bottom: 2rem;
+  padding: 3rem 1rem;
+}
+
+.wrapper .footer * {
+  padding: 0.5rem;
+}
+
+.footer .footer-wrapper {
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer .footer-wrapper > * {
+  /* border: 2px solid blueviolet; */
+}
+
+ .footer-wrapper .footer-info {
+  border: 2px solid rgb(236, 235, 235);
+  border-radius: 10px;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  /* box-shadow: 2px 2px 3px grey; */
+  /* 2px 2px 3px grey inset; */
+}
+
+@media screen and (max-width:900px) {
+  .footer-wrapper .footer-info {
+    flex-direction: column;
+  }
+
+  .footer-info .info {
+    padding: 2rem 3rem !important;
+  }
+  
+}
+
+ .footer-info .logo {
+  width: 300px;
+  height: 300px;
+ }
+
+ .footer-info .logo  .footer-logo {
+  display: block;
+  width: 100%;
+  height: 100%;
+
+ }
+
+.footer .footer-wrapper .footer-info > * {
+  /* border: 2px solid blue; */
+}
+
+.footer-info .info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* max-width: 1080px; */
+  padding: 3rem 10rem;
+  text-align: center;
+  /* border: 2px solid; */
+}
+
+.footer .rights {
+  text-align: center;
 }
