--- a/login.css
+++ b/login.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 100dvh;
     background-color: aliceblue;
 }
 
