--- a/sumathi.css
+++ b/sumathi.css
@@ -341,7 +341,7 @@ img {
   padding: 1rem 5rem;
 }
 
-.magazines  .image-card .download {
+.magazines .image-card .download {
   border: 2px solid black;
   border-top: none;
   font-weight: 500;
@@ -385,10 +385,52 @@ img {
   padding: 1rem 5rem;
 }
 
-.tv-channel .videos-wrapper iframe {
+
+.videos-wrapper>:nth-child(2n){
+  background: linear-gradient(45deg, rgb(178, 127, 236), rgb(236, 236, 49));
+}
+.videos-wrapper>:nth-child(2n+1){
+  background: linear-gradient(45deg, green, yellow);
+}
+
+/* .videos-wrapper>:nth-child(2){
+  background: linear-gradient(45deg, red, yellow);
+}
+.videos-wrapper>:nth-child(3){
+  background: linear-gradient(45deg, red, yellow);
+}
+.videos-wrapper>:nth-child(4){
+  background: linear-gradient(45deg, red, yellow);
+}
+.videos-wrapper>:nth-child(5){
+  background: linear-gradient(45deg, red, yellow);
+}
+.videos-wrapper>:nth-child(6){
+  background: linear-gradient(45deg, red, yellow);
+}
+.videos-wrapper>:nth-child(6){
+  background: linear-gradient(45deg, red, yellow);
+} */
+
+
+
+.videos-wrapper .iframe-border {
+  /* border: 2px solid red; */
+  height: 170px;
+  width: 300px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+}
+
+
+
+.iframe-border iframe {
   /* border: none; */
-  border-radius: 5px;
-  border: 10px solid rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+
+  /* border-radius: 5px;
+  border: 10px solid rgb(255, 255, 255); */
 }
 
 
@@ -414,7 +456,7 @@ img {
 }
 
 
- .footer-wrapper .footer-info {
+.footer-wrapper .footer-info {
   border: 2px solid rgb(236, 235, 235);
   border-radius: 10px;
   display: flex;
@@ -433,20 +475,20 @@ img {
   .footer-info .info {
     padding: 2rem 3rem !important;
   }
-  
+
 }
 
- .footer-info .logo {
+.footer-info .logo {
   width: 300px;
   height: 300px;
- }
+}
 
- .footer-info .logo  .footer-logo {
+.footer-info .logo .footer-logo {
   display: block;
   width: 100%;
   height: 100%;
 
- }
+}
 
 
 
